added browse placeholder

--- a/HomePage/homePage.html
+++ b/HomePage/homePage.html
@@ -27,7 +27,7 @@
                 </svg>
                 User Login
             </a>
-            <a href="#" class="nav-item">
+            <a href="../Browse/browse.html" class="nav-item" onclick="window.location.href='../Browse/browse.html'">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <circle cx="11" cy="11" r="8"></circle>
                     <path d="m21 21-4.35-4.35"></path>
