--- a/Browse/browse.html
+++ b/Browse/browse.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Browse</title>
     <link rel="stylesheet" href="browse.css">
 </head>
 <body>
@@ -39,6 +39,18 @@
                 </svg>
                 Account
             </a>
+        </div>
+    </div>
+    <div class="main-content">
+        <div class="top-menu">
+            <input class ="search-bar" type="text" placeholder="Search...">
+            <button class = "filter-button">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <polygon points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"></polygon>
+                </svg>
+            </button>
+            <button class = "search-button">Search
+            </button>
         </div>
     </div>
     <script src = "browse.js"> </script>
