added item description

--- a/AuctionItem/auction_item.html
+++ b/AuctionItem/auction_item.html
@@ -54,6 +54,14 @@
 
         <div class="item-info">
           <h2>A Book</h2>
+          <!-- 商品描述 -->
+          <div class="item-description">
+            <p>
+              This is a second-hand book in good condition. The pages are slightly yellowed
+              but intact, and the cover shows minor wear. Perfect for collectors or readers
+              who enjoy classic literature.
+            </p>
+          </div>
 
           <!-- 資訊卡 -->
           <div class="info-grid">
