--- a/Login/login.html
+++ b/Login/login.html
@@ -26,7 +26,8 @@
                 </svg>
                 Browse
             </a>
-            <a href="#" class="nav-item">
+            <a href="../Cart/cart.html" class="nav-item" onclick="window.location.href='../Cart/cart.html'">
+                
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path>
                     <line x1="3" y1="6" x2="21" y2="6"></line>
