--- a/Login/userProfile.html
+++ b/Login/userProfile.html
@@ -17,14 +17,14 @@
                 </svg>
                 Home
             </a>
-            <a href="../Browse/browse.html" class="nav-item">
+            <a href="../Browse/browse.html" class="nav-item" onclick="window.location.href='../Browse/browse.html'"></a>
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <circle cx="11" cy="11" r="8"></circle>
                     <path d="m21 21-4.35-4.35"></path>
                 </svg>
                 Browse
             </a>
-            <a href="#" class="nav-item">
+           <a href="../Cart/cart.html" class="nav-item" onclick="window.location.href='../Cart/cart.html'"></a>
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path>
                     <line x1="3" y1="6" x2="21" y2="6"></line>
