minor bug fixes
-capital letter title for cart
-profile side bar fix bc someone broke it
-profile nav fix

--- a/Login/userProfile.html
+++ b/Login/userProfile.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Profile</title>
     <link rel="stylesheet" href="userProfile.css">
 </head>
 <body>
     <div class="sidebar">
         <div class="logo">海大拍賣系統</div>
+
         <div class="nav-section">
             <div class="nav-title">Discover</div>
             <a href="../HomePage/homePage.html" class="nav-item" onclick="window.location.href='../HomePage/homePage.html'">
@@ -17,14 +18,14 @@
                 </svg>
                 Home
             </a>
-            <a href="../Browse/browse.html" class="nav-item" onclick="window.location.href='../Browse/browse.html'"></a>
+            <a href="../Browse/browse.html" class="nav-item" onclick="window.location.href='../Browse/browse.html'">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <circle cx="11" cy="11" r="8"></circle>
                     <path d="m21 21-4.35-4.35"></path>
                 </svg>
                 Browse
             </a>
-           <a href="../Cart/cart.html" class="nav-item" onclick="window.location.href='../Cart/cart.html'"></a>
+            <a href="../Cart/cart.html" class="nav-item" onclick="window.location.href='../Cart/cart.html'">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path>
                     <line x1="3" y1="6" x2="21" y2="6"></line>
