--- a/Cart/cart.html
+++ b/Cart/cart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cart</title>
+    <title>Cart</title>
     <link rel="stylesheet" href="cart.css">
 </head>
 <body>
