added default pic

--- a/Login/userProfile.html
+++ b/Login/userProfile.html
@@ -54,7 +54,7 @@
             <h2 class="section-title">Account Settings</h2>
             <div class="profile-section">
                 <div class="profile-pic">
-                    <img src="default-profile.png" alt="Profile Picture">
+                    <img src="default-profile.svg" alt="Profile Picture">
                 </div>
                 <div class="profile-pic-actions">
                     <button class="change-pic-btn" onclick="">Change Picture</button>
