--- a/Browse/browse.html
+++ b/Browse/browse.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Browse</title>
@@ -44,13 +44,18 @@
     <div class="main-content">
         <div class="top-menu">
             <input class ="search-bar" type="text" placeholder="Search...">
-            <button class = "filter-button">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <polygon points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"></polygon>
-                </svg>
-            </button>
-            <button class = "search-button">Search
-            </button>
+            <div class = wrapper>
+                <button class = "filter-button">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <polygon points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"></polygon>
+                    </svg>
+                </button>
+                <div id="ftr" class="filter-content">
+                    <a href="#" class = "filter-element">test1</a>
+                    <a href = "#" class = "filter-element"> test2</a>
+                </div>
+            </div>
+            <button class = "search-button">Search</button>
         </div>
     </div>
     <script src = "browse.js"> </script>
