forgot what this is but it's something

--- a/Browse/browse.html
+++ b/Browse/browse.html
@@ -51,8 +51,12 @@
                     </svg>
                 </button>
                 <div id="ftr" class="filter-content">
-                    <a href="#" class = "filter-element">test1</a>
-                    <a href = "#" class = "filter-element"> test2</a>
+                    <label class = "filter-element">
+                        Checking thingy
+                        <input type="checkbox">
+                        <br>Sliding thingy
+                        <input type = "range">
+                    </label>
                 </div>
             </div>
             <button class = "search-button">Search</button>
