Optimization : Injecting sideBar using js

--- a/public/browse.html
+++ b/public/browse.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/browse.css">
 </head>
 <body>
+    <div id="sidebar"></div>
     <div class="main-content">
         <div class="top-menu">
             <input class ="search-bar" type="text" placeholder="Search...">
