--- a/public/seller.html
+++ b/public/seller.html
@@ -7,43 +7,7 @@
     <link rel="stylesheet" href="css/seller.css">
 </head>
 <body>
-    <div class="sidebar">
-        <div class="logo">海大拍賣系統</div>
-        
-        <div class="nav-section">
-            <div class="nav-title">Discover</div>
-            <a href="homePage.html" class="nav-item" onclick="window.location.href='homePage.html'">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
-                    <polyline points="9 22 9 12 15 12 15 22"></polyline>
-                </svg>
-                Home
-            </a>
-            <a href="browse.html" class="nav-item" onclick="window.location.href='browse.html'">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <circle cx="11" cy="11" r="8"></circle>
-                    <path d="m21 21-4.35-4.35"></path>
-                </svg>
-                Browse
-            </a>
-            <a href="#" class="nav-item">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4z"></path>
-                    <line x1="3" y1="6" x2="21" y2="6"></line>
-                    <path d="M16 10a4 4 0 0 1-8 0"></path>
-                </svg>
-                Cart
-            </a>
-            <a href="userProfile.html" class="nav-item active" onclick="window.location.href='userProfile.html'">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <circle cx="12" cy="8" r="4"></circle>
-                    <path d="M4 20c0-4 4-7 8-7s8 3 8 7"></path>
-                </svg>
-                Account
-            </a>
-        </div>
-    </div>
-
+    <div id="sidebar"></div>
     <div class="main-content">
         <header class="upload-header">
             <h1>Upload New Auction Item</h1>
