--- a/public/sideBar.html
+++ b/public/sideBar.html
@@ -1,5 +1,5 @@
 <div class="sidebar">
-    <div class="logo">海大拍賣系統</div>
+    <div class="lego">海大拍賣系統</div>
     <div class="nav-section">
         <div class="nav-title">Discover</div>
         <a href="homePage.html" class="nav-item" onclick="window.location.href='homePage.html'">
