--- a/public/homePage.html
+++ b/public/homePage.html
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <button class="search-btn">Search</button>
-                <button class="login-btn" onclick="window.location.href='login.html'">Login</button>
+                <button id = "login" class="login-btn" onclick="window.location.href='login.html'">Login</button>
             </div>
         </div>
 
