Feature: User who isn't signed in cannot access profile page

--- a/public/sideBar.html
+++ b/public/sideBar.html
@@ -25,7 +25,7 @@
                 </svg>
                 Cart
             </a>
-            <a href="userProfile.html" class="nav-item" onclick="window.location.href='userProfile.html'">
+            <a href="userProfile.html" id = "profile" class="nav-item" onclick="window.location.href='userProfile.html'">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <circle cx="12" cy="8" r="4"></circle>
                     <path d="M4 20c0-4 4-7 8-7s8 3 8 7"></path>
