--- a/public/userProfile.html
+++ b/public/userProfile.html
@@ -19,7 +19,7 @@
             <h2 class="section-title">Account Settings</h2>
             <div class="profile-section">
                 <div class="profile-pic">
-                    <img src="default-profile.svg" alt="Profile Picture">
+                    <img id = "pic" alt="Profile Picture">
                 </div>
                 <div class="profile-pic-actions">
                     <button class="change-pic-btn" onclick="">Change Picture</button>
