--- a/public/chat.html
+++ b/public/chat.html
@@ -10,8 +10,9 @@
 <body>
     <div id="sidebar"></div>
     <div class="main-content">
-        <div class="list-group">
-            <button type="button" class="list-group-item list-group-item-action">And a fifth one</button>
+        <div id = "chatContainer" class="list-group">
+<!--            <button type="button" class="list-group-item list-group-item-action">And a fifth one</button>-->
+            <div class="spinner"></div>
         </div>
     </div>
     <script type="module" src="javascript/chat.js"></script>
