--- a/public/chat.html
+++ b/public/chat.html
@@ -55,11 +55,11 @@
                 </div>
 
                 <div class="p-3 border-top">
-                    <form id="messageForm" class="d-flex">
-                        <input type="hidden" id="chatIdInput" value="">
+                    <div class="d-flex">
+                        <input type = 'hidden' id='chatIdInput' value = ''>
                         <input type="text" id="messageInput" class="form-control me-2" placeholder="Type your message..." required>
-                        <button type="submit" class="btn btn-primary">Send</button>
-                    </form>
+                        <button id = 'submit' type="submit" class="btn btn-primary">Send</button>
+                    </div>
                 </div>
             </div>
 
