--- a/public/uploadItem.html
+++ b/public/uploadItem.html
@@ -43,7 +43,7 @@
                 </div>
                 <label class="toggle-container">
                     <input type="checkbox" id = "modeSwitch" name="mode" value="true">
-                    <span class="slider"></span>
+                    <span class="DSslider"></span>
                     <span class="label-text">Direct Sales</span>
                 </label>
                 <!-- Auction Details Title -->
