--- a/public/chat.html
+++ b/public/chat.html
@@ -8,64 +8,71 @@
 </head>
 <body>
     <div id="sidebar"></div>
-    <div class = "main-content">
-    <div class="container-fluid vh-100 overflow-hidden">
-    <div class="row h-100">
+    <div class="main-content">
+        <div class="container-fluid vh-100 overflow-hidden">
+            <div class="row h-100">
 
-        <div class="col-sm-4 col-md-3 p-0 chat-list-container">
-            <div class="p-3 bg-light border-bottom">
-                <h5 class="mb-0">Your Chats</h5>
-            </div>
-
-            <div id="chatContainer" class="list-group list-group-flush">
-                <div class="d-flex justify-content-center py-4 loading-indicator">
-                    <div class="spinner-border text-primary" role="status">
-                        <span class="visually-hidden">Loading chats...</span>
+                <!-- 左側：聊天列表 -->
+                <div class="col-sm-4 col-md-3 p-0 chat-list-container">
+                    <!-- 移除 bg-light，加入 custom-header -->
+                    <div class="p-3 border-bottom custom-header">
+                        <h5 class="mb-0">Your Chats</h5>
                     </div>
+
+                    <div id="chatContainer" class="list-group list-group-flush">
+                        <div class="d-flex justify-content-center py-4 loading-indicator">
+                            <div class="spinner-border text-primary" role="status">
+                                <span class="visually-hidden">Loading chats...</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- 右側：聊天內容 -->
+                <div class="col-sm-8 col-md-9 p-0 chat-messages-container">
+
+                    <!-- 未選擇聊天時的畫面 -->
+                    <!-- 移除 bg-light, text-muted，改用 custom-empty-state -->
+                    <div id="noChatSelected" class="d-flex justify-content-center align-items-center h-100 custom-empty-state">
+                        <div class="text-center">
+                            <!-- SVG 顏色也要能變 -->
+                            <svg class="empty-icon" fill="currentColor" width="40px" height="40px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <path d="m12 1.316c-5.901 0-10.684 4.783-10.684 10.684s4.783 10.684 10.684 10.684 10.684-4.783 10.684-10.684c-.012-5.896-4.788-10.672-10.683-10.684h-.001zm0 22.297c-6.414 0-11.613-5.199-11.613-11.613s5.199-11.613 11.613-11.613 11.613 5.199 11.613 11.613v.015c0 6.405-5.192 11.597-11.597 11.597-.005 0-.011 0-.016 0h.001z"/>
+                                <path d="m12 24c-6.614-.034-11.966-5.386-12-11.997v-.003c0-6.627 5.373-12 12-12s12 5.373 12 12c-.034 6.614-5.386 11.966-11.997 12zm0-23.226c-6.2 0-11.226 5.026-11.226 11.226s5.026 11.226 11.226 11.226 11.226-5.026 11.226-11.226c-.004-6.198-5.028-11.221-11.225-11.226zm0 22.297c-6.114 0-11.071-4.957-11.071-11.071s4.957-11.071 11.071-11.071c6.114 0 11.071 4.957 11.071 11.071s-4.957 11.071-11.071 11.071zm0-21.368c-5.687 0-10.297 4.61-10.297 10.297s4.61 10.297 10.297 10.297 10.297-4.61 10.297-10.297c0-.001 0-.003 0-.005 0-5.684-4.608-10.292-10.292-10.292-.002 0-.003 0-.005 0z"/>
+                                <path d="m9.677 9.91v.009c0 1.15-.932 2.082-2.082 2.082-.003 0-.006 0-.009 0-1.154 0-2.09-.936-2.09-2.09s.936-2.09 2.09-2.09 2.09.936 2.09 2.09z"/>
+                                <path d="m12 19.665c-.257 0-.465-.208-.465-.465s.208-.465.465-.465h.011c3.038 0 5.619-1.954 6.555-4.674l.015-.049c.052-.189.223-.325.425-.325.042 0 .082.006.12.017l-.003-.001c.189.052.325.223.325.425 0 .042-.006.082-.016.12l.001-.003c-1.041 3.17-3.974 5.419-7.432 5.419z"/>
+                                <path d="m12 20.052c-.469-.004-.847-.383-.852-.851.032-.457.395-.82.849-.851h.003.076c2.855 0 5.275-1.866 6.105-4.445l.013-.045c.065-.203.203-.366.383-.462l.004-.002c.119-.065.26-.103.411-.103.074 0 .146.009.215.027l-.006-.001c.345.108.592.425.592.8 0 .102-.018.199-.051.29l.002-.006c-1.058 3.303-4.101 5.652-7.692 5.652-.017 0-.035 0-.052 0h.003zm0-.852c-.02.02-.033.047-.033.077s.013.058.033.077h.017c3.266 0 6.037-2.119 7.014-5.058l.015-.052v-.077h-.077c-.992 2.947-3.729 5.032-6.954 5.032-.005 0-.009 0-.014 0h.001z"/>
+                                <path d="m17.961 10.142h-1.703l.697-.542c.133-.112.218-.278.218-.465 0-.334-.271-.605-.605-.605-.148 0-.283.053-.388.141l.001-.001-2.013 1.548c-.09.112-.168.239-.228.376l-.004.011v.155c.03.306.285.542.596.542h.025-.001 3.406.009c.337 0 .611-.273.611-.611 0-.003 0-.006 0-.009-.03-.306-.285-.542-.596-.542-.008 0-.017 0-.025 0h.001z"/>
+                            </svg>
+                            <p class="mt-2">Select a chat from the left sidebar to view messages.</p>
+                        </div>
+                    </div>
+
+                    <!-- 聊天內容區 -->
+                    <div id="chatContent" class="chat-messages-container d-none">
+                        <!-- 移除 bg-light，加入 custom-header -->
+                        <div class="p-3 border-bottom d-flex justify-content-between align-items-center custom-header">
+                            <div>
+                                <h5 class="mb-0">Chat with: <span id="recipientName"></span></h5>
+                                <!-- 移除 text-muted，加入 custom-subtext -->
+                                <small class="custom-subtext">Subject: <span id="subjectTitle"></span></small>
+                            </div>
+                        </div>
+
+                        <div id="messagesArea" class="message-box">
+                        </div>
+
+                        <!-- 輸入框區域：移除寫死的 class，交給 CSS .input-area 處理 -->
+                        <div class="input-area border-top">
+                            <input type='hidden' id='chatIdInput' value=''>
+                            <input type="text" id="messageInput" class="form-control me-2" placeholder="Type your message..." required>
+                            <button id='submit' type="submit" class="btn btn-primary">Send</button>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
-
-        <div class="col-sm-8 col-md-9 p-0 chat-messages-container">
-
-            <div id="noChatSelected" class="d-flex justify-content-center align-items-center h-100 text-muted bg-light">
-                <div class="text-center">
-                    <svg fill="#000000" width="40px" height="40px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path d="m12 1.316c-5.901 0-10.684 4.783-10.684 10.684s4.783 10.684 10.684 10.684 10.684-4.783 10.684-10.684c-.012-5.896-4.788-10.672-10.683-10.684h-.001zm0 22.297c-6.414 0-11.613-5.199-11.613-11.613s5.199-11.613 11.613-11.613 11.613 5.199 11.613 11.613v.015c0 6.405-5.192 11.597-11.597 11.597-.005 0-.011 0-.016 0h.001z"/>
-                        <path d="m12 24c-6.614-.034-11.966-5.386-12-11.997v-.003c0-6.627 5.373-12 12-12s12 5.373 12 12c-.034 6.614-5.386 11.966-11.997 12zm0-23.226c-6.2 0-11.226 5.026-11.226 11.226s5.026 11.226 11.226 11.226 11.226-5.026 11.226-11.226c-.004-6.198-5.028-11.221-11.225-11.226zm0 22.297c-6.114 0-11.071-4.957-11.071-11.071s4.957-11.071 11.071-11.071c6.114 0 11.071 4.957 11.071 11.071s-4.957 11.071-11.071 11.071zm0-21.368c-5.687 0-10.297 4.61-10.297 10.297s4.61 10.297 10.297 10.297 10.297-4.61 10.297-10.297c0-.001 0-.003 0-.005 0-5.684-4.608-10.292-10.292-10.292-.002 0-.003 0-.005 0z"/>
-                        <path d="m9.677 9.91v.009c0 1.15-.932 2.082-2.082 2.082-.003 0-.006 0-.009 0-1.154 0-2.09-.936-2.09-2.09s.936-2.09 2.09-2.09 2.09.936 2.09 2.09z"/>
-                        <path d="m12 19.665c-.257 0-.465-.208-.465-.465s.208-.465.465-.465h.011c3.038 0 5.619-1.954 6.555-4.674l.015-.049c.052-.189.223-.325.425-.325.042 0 .082.006.12.017l-.003-.001c.189.052.325.223.325.425 0 .042-.006.082-.016.12l.001-.003c-1.041 3.17-3.974 5.419-7.432 5.419z"/>
-                        <path d="m12 20.052c-.469-.004-.847-.383-.852-.851.032-.457.395-.82.849-.851h.003.076c2.855 0 5.275-1.866 6.105-4.445l.013-.045c.065-.203.203-.366.383-.462l.004-.002c.119-.065.26-.103.411-.103.074 0 .146.009.215.027l-.006-.001c.345.108.592.425.592.8 0 .102-.018.199-.051.29l.002-.006c-1.058 3.303-4.101 5.652-7.692 5.652-.017 0-.035 0-.052 0h.003zm0-.852c-.02.02-.033.047-.033.077s.013.058.033.077h.017c3.266 0 6.037-2.119 7.014-5.058l.015-.052v-.077h-.077c-.992 2.947-3.729 5.032-6.954 5.032-.005 0-.009 0-.014 0h.001z"/>
-                        <path d="m17.961 10.142h-1.703l.697-.542c.133-.112.218-.278.218-.465 0-.334-.271-.605-.605-.605-.148 0-.283.053-.388.141l.001-.001-2.013 1.548c-.09.112-.168.239-.228.376l-.004.011v.155c.03.306.285.542.596.542h.025-.001 3.406.009c.337 0 .611-.273.611-.611 0-.003 0-.006 0-.009-.03-.306-.285-.542-.596-.542-.008 0-.017 0-.025 0h.001z"/>
-                    </svg>
-                    <p class="mt-2">Select a chat from the left sidebar to view messages.</p>
-                </div>
-            </div>
-
-            <div id="chatContent" class="chat-messages-container d-none">
-
-                <div class="p-3 bg-light border-bottom d-flex justify-content-between align-items-center">
-                    <div>
-                        <h5 class="mb-0">Chat with: <span id="recipientName"></span></h5>
-                        <small class="text-muted">Subject: <span id="subjectTitle"></span></small>
-                    </div>
-                </div>
-
-                <div id="messagesArea" class="message-box">
-                </div>
-
-                <div class="p-3 border-top">
-                    <div class="d-flex">
-                        <input type = 'hidden' id='chatIdInput' value = ''>
-                        <input type="text" id="messageInput" class="form-control me-2" placeholder="Type your message..." required>
-                        <button id = 'submit' type="submit" class="btn btn-primary">Send</button>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-    </div>
     </div>
     <script type="module" src="javascript/chat.js"></script>
 </body>
